--- a/apps/site/package.json
+++ b/apps/site/package.json
@@ -19,6 +19,7 @@
     "@docusaurus/preset-classic": "3.1.1",
     "@docusaurus/theme-live-codeblock": "^3.1.1",
     "@mdx-js/react": "^3.0.0",
+    "@rhino-ui/components": "workspace:^",
     "clsx": "^2.0.0",
     "docusaurus-plugin-sass": "^0.2.5",
     "prism-react-renderer": "^2.3.0",
