--- a/apps/site/package.json
+++ b/apps/site/package.json
@@ -29,7 +29,8 @@
   "devDependencies": {
     "@docusaurus/module-type-aliases": "3.1.1",
     "@docusaurus/tsconfig": "3.1.1",
-    "@docusaurus/types": "3.1.1"
+    "@docusaurus/types": "3.1.1",
+    "react-router-dom": "^6.22.2"
   },
   "browserslist": {
     "production": [
