--- a/apps/site/package.json
+++ b/apps/site/package.json
@@ -24,7 +24,8 @@
     "docusaurus-plugin-sass": "^0.2.5",
     "prism-react-renderer": "^2.3.0",
     "react": "^18.0.0",
-    "react-dom": "^18.0.0"
+    "react-dom": "^18.0.0",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@docusaurus/module-type-aliases": "3.1.1",
